Fixed wrap in hearing for judge

--- a/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/participant-waiting-room/private-consultation-participants/participant-item/participant-item.component.scss
+++ b/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/participant-waiting-room/private-consultation-participants/participant-item/participant-item.component.scss
@@ -51,9 +51,7 @@
 .white {
   color: rgba(255, 255, 255, 0.9);
 }
-.display-name {
-  overflow-wrap: anywhere;
-}
+
 .outline {
   border: 2px solid rgba(255, 255, 255, 0.9);
   border-radius: 2px;
