--- a/VideoWeb/VideoWeb/ClientApp/src/styles.scss
+++ b/VideoWeb/VideoWeb/ClientApp/src/styles.scss
@@ -149,6 +149,10 @@ $govuk-global-styles: true;
   transition: visibility 0s linear 0s, opacity 300ms;
 }
 
+.wrap-anywhere {
+  overflow-wrap: anywhere;
+}
+
 .vh-tooltip {
   @include govuk-font(14, $weight: 'regular', $tabular: false, $line-height: false);
   color: govuk-colour('white');
